# swon

./: .gitignore  Cargo.toml  README.md  example.swon
assets/: .gitignore
assets/default-configs/: swon-lint-v0.0.0.swon
crates/serde-swon/: Cargo.toml  README.md
crates/swon/: Cargo.toml  README.md
crates/swon-cli/: Cargo.toml  README.md
crates/swon-cli/src/: main.rs
crates/swon-dev/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
crates/swon-dev/src/: main.rs
crates/swon-editor-support/: Cargo.toml  README.md
crates/swon-editor-support/src/: diagnostics.rs  lib.rs  parser.rs  semantic_tokens.rs
crates/swon-fmt/: Cargo.toml  README.md
crates/swon-fmt/src/: lib.rs  unformat.rs
crates/swon-json/: Cargo.toml  README.md
crates/swon-json-schema/: Cargo.toml  README.md
crates/swon-lint/: Cargo.toml  README.md
crates/swon-ls/: Cargo.toml  README.md
crates/swon-ls/src/: main.rs
crates/swon-parol/: Cargo.toml  README.md  swon.par
crates/swon-parol-gen/: Cargo.toml  README.md
crates/swon-parol-gen/src/: ast_type_generator.rs  main.rs  visitor_generator.rs
crates/swon-parol/src/: ast.rs  grammar.rs  grammar_trait.rs  lib.rs  nodes.rs  parser.rs  syntree_node.rs  tree.rs  visitor.rs
crates/swon-parol/src/tree/: span.rs
crates/swon-schema/: Cargo.toml  README.md
crates/swon-template/: Cargo.toml  README.md
crates/swon-toml/: Cargo.toml  README.md
crates/swon-tree/: Cargo.toml  README.md
crates/swon-tree/src/: action.rs  ast.rs  common_visitors.rs  lib.rs  node_kind.rs  nodes.rs  tree.rs  value_visitor.rs  visitor.rs
crates/swon-tree/src/tree/: span.rs
crates/swon-value/: Cargo.toml  README.md
crates/swon-value/src/: identifier.rs  lib.rs  tree.rs  value.rs
crates/swon-yaml/: Cargo.toml  README.md
crates/swon/src/: extensions.rs
docs/: cst-and-visitor.md  data-types.md  decision-records.md  extensions.md  schema-extensions.md  schemas.md  swon-fmt.md  template-extensions.md
editors/vscode/: .gitignore  LICENSE  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: main.ts
playground/: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
playground/src/: index.html  index.ts
