[workspace]

resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
parol_runtime = { git = "https://github.com/ryo33/parol.git", package = "parol_runtime", branch = "parse2" }
parol = { git = "https://github.com/ryo33/parol.git", package = "parol", branch = "parse2" }
serde = "1"
serde_json = "1"
anyhow = "1"
syntree = "0.18"
ahash = "0.8.11"
thisisplural = "0.4"

# For faster parser generation
[profile.dev.package.parol]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
