[workspace]

resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde-swon = { path = "crates/serde-swon", version = "0.1.0" }
swon = { path = "crates/swon", version = "0.1.0" }
swon-parol = { path = "crates/swon-parol", version = "0.1.0" }
swon-fmt = { path = "crates/swon-fmt", version = "0.1.0" }
swon-json-schema = { path = "crates/swon-json-schema", version = "0.1.0" }
swon-toml = { path = "crates/swon-toml", version = "0.1.0" }
swon-schema = { path = "crates/swon-schema", version = "0.1.0" }
swon-lint = { path = "crates/swon-lint", version = "0.1.0" }
swon-template = { path = "crates/swon-template", version = "0.1.0" }
swon-value = { path = "crates/swon-value", version = "0.1.0" }
swon-tree = { path = "crates/swon-tree", version = "0.1.0" }
swon-editor-support = { path = "crates/swon-editor-support", version = "0.1.0" }

parol_runtime = { git = "https://github.com/ryo33/parol.git", package = "parol_runtime", branch = "parse2" }
parol = { git = "https://github.com/ryo33/parol.git", package = "parol", branch = "parse2" }
serde = "1"
serde_json = "1"
anyhow = "1"
syntree = "0.18"
ahash = { version = "0.8.11", default-features = false }
thisisplural = "0.7"
lsp-types = "0.97.0"
thiserror = { version = "2.0", default-features = false }
petgraph = "0.8.1"

# For faster parser generation
[profile.dev.package.parol]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
