[package]
name = "serde-swon"
version = "0.1.0"
edition = "2024"
description = "Serde support for SWON format"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "serde", "serialization", "deserialization"]

[dependencies]
