[package]
name = "swon-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line tool for SWON format conversion and validation"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "cli", "conversion", "validation"]

[[bin]]
name = "swon"
path = "src/main.rs"

[dependencies]
swon-tree = { workspace = true }
swon-fmt = { workspace = true, features = ["unformat"] }

clap = { version = "4.0", features = ["derive"] }
swon-parol = { workspace = true }
petgraph = "0.8.1"
