[package]
name = "swon-editor-support"
version = "0.1.0"
edition = "2024"
description = "Editor support utilities for SWON format"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"

[dependencies]
swon-parol = { workspace = true }
swon-tree = { workspace = true }
lsp-types = { workspace = true }
