[package]
name = "swon-fmt"
version = "0.1.0"
edition = "2024"
description = "Formatter for SWON files"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "formatter", "pretty-print", "code-style"]

[dependencies]
swon-tree = { workspace = true }
