[package]
name = "swon-json-schema"
version = "0.1.0"
edition = "2024"
description = "JSON Schema compatibility for SWON format"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "json-schema", "schema", "validation"]

[dependencies]
