[package]
name = "swon-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.97.0"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
swon-editor-support = { path = "../swon-editor-support", version = "0.1.0" }
swon-parol = { workspace = true }
