[package]
name = "swon-ls"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol implementation for SWON"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "language-server", "lsp", "ide"]

[dependencies]
swon-editor-support = { workspace = true }
swon-tree = { workspace = true }

lsp-server = "0.7.6"
lsp-types = "0.97.0"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
