[package]
name = "swon-parol"
version = "0.1.0"
edition = "2024"
description = "SWON parser implementation using Parol"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"

[dependencies]
swon-tree = { workspace = true }

parol_runtime.workspace = true
petgraph = "0.8.1"
thiserror = { workspace = true }
thisisplural = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
syntree_layout = "0.4"
pretty_assertions = "1.3"
