[package]
name = "swon-schema"
version = "0.1.0"
edition = "2024"
description = "Schema specification and validation for SWON"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "schema", "validation", "specification"]

[dependencies]
