[package]
name = "swon-template"
version = "0.1.0"
edition = "2024"
description = "Templating extension for SWON files"
license = "MIT OR Apache-2.0"
homepage = "https://swon.dev"
repository = "https://github.com/Hihaheho/swon"
readme = "README.md"
keywords = ["swon", "template", "templating", "code-generation"]

[dependencies]
